--- a/Covid19-nlp/Covid.ipynb
+++ b/Covid19-nlp/Covid.ipynb
@@ -1506,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "pointed-channel",
+   "id": "thousand-accused",
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "introductory-hospital",
+   "id": "figured-investigator",
    "metadata": {},
    "source": [
     "### Label Encoding to Sentiment"
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "friendly-weather",
+   "id": "spoken-algorithm",
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1750,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "constant-chemical",
+   "id": "worst-wiring",
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "industrial-presentation",
+   "id": "comparable-leeds",
    "metadata": {},
    "source": [
     "### Scatter text ( parsing tweets )"
@@ -1871,7 +1871,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "applied-fundamental",
+   "id": "authorized-mentor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1885,7 +1885,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "removable-machine",
+   "id": "elect-turner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1898,7 +1898,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "modified-motor",
+   "id": "filled-secretary",
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +2020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "standing-state",
+   "id": "alpha-benchmark",
    "metadata": {},
    "source": [
     "### TOKENIZATION and MODELLING"
@@ -2029,7 +2029,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "checked-parts",
+   "id": "demographic-spain",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "blond-eleven",
+   "id": "jewish-canvas",
    "metadata": {},
    "outputs": [
     {
@@ -2140,7 +2140,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "incomplete-departure",
+   "id": "simple-beijing",
    "metadata": {},
    "outputs": [
     {
@@ -2161,7 +2161,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "unable-vocabulary",
+   "id": "explicit-crazy",
    "metadata": {},
    "outputs": [
     {
@@ -3196,7 +3196,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "future-digit",
+   "id": "infinite-delay",
    "metadata": {},
    "outputs": [
     {
@@ -4152,7 +4152,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "adjustable-deviation",
+   "id": "moving-visit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4167,7 +4167,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "broadband-performer",
+   "id": "acting-darwin",
    "metadata": {},
    "outputs": [
     {
@@ -4190,7 +4190,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "amateur-relations",
+   "id": "racial-savage",
    "metadata": {},
    "outputs": [
     {
@@ -4209,7 +4209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collective-offset",
+   "id": "intended-eagle",
    "metadata": {},
    "source": [
     "### CONFUSION MATRIX TO SEE PREDICTIONS"
@@ -4218,7 +4218,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "peaceful-ethiopia",
+   "id": "uniform-fetish",
    "metadata": {},
    "outputs": [
     {
@@ -4247,6 +4247,33 @@
     "plt.figure(figsize = (12,7))\n",
     "sns.heatmap(cm, annot=True, fmt=\"d\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "expressed-authority",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    Negative       0.95      0.91      0.93      1554\n",
+      "     Neutral       0.95      0.85      0.90       659\n",
+      "    Positive       0.89      0.96      0.93      1585\n",
+      "\n",
+      "    accuracy                           0.92      3798\n",
+      "   macro avg       0.93      0.91      0.92      3798\n",
+      "weighted avg       0.93      0.92      0.92      3798\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, classes_x, target_names=labels))"
    ]
   }
  ],
